# RadCounterSim

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment_manifest.json  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
benchmarks/: regression_baseline.json
configs/detectors/: omni_counter.yaml  rotating_shield_counter.yaml
configs/isotopes/: example_isotope.yaml
configs/materials/: air.yaml  concrete.yaml  lead.yaml  steel.yaml
configs/robots/: countermeasure_robot.yaml  measurement_robot.yaml
configs/scenarios/: analytic_free_space.yaml  closed_loop_reference.yaml
docs/: CHANGELOG.md  api.md  architecture.md  definition-of-done.md  experiments.md  native-embree.md  radiation_model.md  ros2.md  scenarios.md  troubleshooting.md  usd_metadata.md  validation.md
docs/decisions/: ADR-0001-three-layer-architecture.md  ADR-0002-uv-python-management.md
docs/specs/: RadCounterSim_Codex_Implementation_Spec.md  RadCounterSim_Codex_Milestone_Prompts.md
native/: CMakeLists.txt
native/src/: embree_backend.cpp
radcounter/: __init__.py
radcounter/core/: __init__.py  cli.py
radcounter/core/actions/: __init__.py  context.py  decontamination.py  objects.py  resources.py  robot.py  shield.py
radcounter/core/estimation/: __init__.py  basis.py  estimators.py  poisson.py  residual.py
radcounter/core/experiments/: __init__.py  artifacts.py  cases.py  cli.py  extended_cases.py  report.py  runner.py
radcounter/core/logging/: __init__.py  events.py  manifest.py
radcounter/core/models/: __init__.py  actions.py  config.py  radiation.py  state.py
radcounter/core/planning/: __init__.py  candidates.py  models.py  oracle.py  planners.py
radcounter/core/radiation/: __init__.py  backend.py  dose_map.py  embree_native.py  forward.py  materials.py  rng.py  sampled_forward.py  sampling.py  scatter.py  transfer.py
radcounter/core/sensors/: __init__.py  detector.py  rotating.py
radcounter/core/workflow/: __init__.py  coordinator.py
ros2_ws/src/radcounter_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/radcounter_bringup/config/: bridge.yaml
ros2_ws/src/radcounter_bringup/launch/: radcounter.launch.py
ros2_ws/src/radcounter_bringup/radcounter_bringup/: __init__.py  bridge_node.py
ros2_ws/src/radcounter_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/radcounter_msgs/action/: ExecuteCountermeasure.action  MeasureRadiation.action
ros2_ws/src/radcounter_msgs/msg/: CountermeasureStatus.msg  RadiationMeasurement.msg  SourceEstimate.msg
ros2_ws/src/radcounter_msgs/srv/: EvaluateCountermeasure.srv  GetDoseMap.srv  ResetEpisode.srv
scripts/: __init__.py  audit_host_gates.py  benchmark_core.py  build_native.sh  build_ros2.sh  check_regression.py  export_run_report.py  host_env.sh  run_demo.sh  run_experiments.py  run_gui.py  run_headless.py  run_isaac.sh  validate_scenario.py  write_environment_manifest.py
source/extensions/radcounter.isaac/: README.md
source/extensions/radcounter.isaac/config/: extension.toml
source/extensions/radcounter.isaac/radcounter/isaac/: __init__.py  extension.py
source/extensions/radcounter.isaac/radcounter/isaac/physics/: __init__.py  actions.py
source/extensions/radcounter.isaac/radcounter/isaac/ros2/: __init__.py  controller.py
source/extensions/radcounter.isaac/radcounter/isaac/runtime/: __init__.py  session.py
source/extensions/radcounter.isaac/radcounter/isaac/ui/: __init__.py  window.py
source/extensions/radcounter.isaac/radcounter/isaac/usd/: __init__.py  embree_scene.py
source/extensions/radcounter.radiation.native/: README.md
source/extensions/radcounter.radiation.native/config/: extension.toml
source/extensions/radcounter.radiation.native/radcounter/radiation/native/: __init__.py
tests/unit/: test_actions.py  test_embree_native_boundary.py  test_estimation.py  test_experiment_artifacts.py  test_extended_experiment_cases.py  test_isaac_extension_artifacts.py  test_models.py  test_planning.py  test_radiation.py  test_residual.py  test_ros_artifacts.py  test_ros_bridge_artifacts.py  test_rotating_sensor.py  test_sampling.py  test_scenario.py  test_sensor.py  test_transfer_map.py  test_workflow.py
