[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "radcountersim"
version = "0.1.0"
description = "Closed-loop radiation measurement and countermeasure simulation core for Isaac Sim"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "RadCounterSim contributors" }]
dependencies = [
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "pyarrow>=18,<24",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "scipy>=1.14,<2",
]

[project.scripts]
radcounter-validate = "radcounter.core.cli:validate_main"
radcounter-headless = "radcounter.core.cli:headless_main"
radcounter-experiments = "radcounter.core.experiments.cli:experiments_main"
radcounter-report = "radcounter.core.experiments.cli:report_main"

[dependency-groups]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.8,<1",
]
native = [
  "cmake>=4.0,<5",
  "ninja>=1.13,<2",
  "pybind11>=3.0,<4",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["radcounter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
