<?xml version="1.0"?>
<package format="3">
  <name>radcounter_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy launch and adapter configuration for RadCounterSim.</description>
  <maintainer email="maintainers@example.invalid">RadCounterSim contributors</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>radcounter_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
