<?xml version="1.0"?>
<package format="3">
  <name>radcounter_msgs</name>
  <version>0.1.0</version>
  <description>RadCounterSim radiation measurement and countermeasure interfaces.</description>
  <maintainer email="maintainers@example.invalid">RadCounterSim contributors</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
